--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "jinukurian7",
   "version": "1.0.0",
-  "description": "",
+  "description": "Personal Website",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "serve": "gulp default",
     "build": "gulp build",
@@ -11,29 +12,29 @@
   "author": "Jinu",
   "license": "ISC",
   "dependencies": {
-    "@babel/preset-env": "^7.14.7",
-    "autoprefixer": "^10.2.6",
-    "browser-sync": "^2.27.4",
-    "del": "^6.0.0",
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "browser-sync": "^2.29.3",
+    "del": "^6.1.1",
+    "deploy": "^1.0.3",
+    "gh-pages": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-notify": "^4.0.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.0",
+    "gulp-imagemin": "^8.0.0",
     "gulp-pug": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "node-sass": "^6.0.1",
-    "streamqueue": "^1.1.2"
+    "node-sass": "^9.0.0",
+    "sass": "^1.63.3"
   },
-  "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "gh-pages": "^3.2.3",
-    "gulp-real-favicon": "^0.3.2",
-    "gulp-sass": "^5.0.0",
-    "sass": "^1.35.1"
+  "overrides": {
+    "chokidar": "3.5.3",
+    "glob-parent": "6.0.2"
   },
   "browserslist": [
     "last 1 version",
